# sylvan_librarian

./: .dockerignore  .gitignore  .oxfmtrc.json  CLAUDE.md  JAVASCRIPT_TEST_SUITE_SUMMARY.md  LICENSE  NOTES.md  README.md  SECURITY.md  conftest.py  docker-compose.yml  makefile  package-lock.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  labeler.yml
.github/workflows/: fix-lint.yml  (+11 more)
api/: Dockerfile  api_resource.py  api_worker.py  card_processing.py  card_store.py  entrypoint.py  enums.py  index-test.html  noscript_helpers.py  scryfall_bulk_data_fetcher.py  settings.py  tag_import.py  tagger_client.py
card_engine/: Cargo.toml  pyproject.toml
card_engine/card_engine/: __init__.py
card_engine/src/: alloc_stats.rs  bench_card_dedup.rs  bench_compose_paging.rs  bench_iter_dispatch.rs  bench_mana.rs  bench_plane_candidate.rs  bench_posting_intersect.rs  bench_text_search.rs  bench_verify_cost.rs  bench_word_dict_scan.rs  cost.rs  estimator.rs  filter.rs  inline_str.rs  legality.rs  lib.rs  planes.rs  tests.rs
card_engine/testdata/: text_corpus.txt
client/: Dockerfile  query_runner.py
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
envs/: blue  dev  green  prod
requirements/: base.txt  requirements.txt  test.txt
scripts/: README.md  bench_arith_tuple_postings.py  bench_bitplanes.py  bench_border_planes.py  bench_collection_compose.py  bench_collection_eq_gt.py  bench_compose_orderby_range_walk.py  bench_compose_permutation_fallback.py  bench_cost_guards.py  bench_devotion.py  bench_guard_validation.py  bench_legality_banned_restricted.py  bench_legality_divergent.py  bench_memo_crossover.py  bench_name_order.py  bench_negated_range_narrowing.py  bench_oracle_word_index.py  bench_permuted_order.py  bench_preferred_index.py  bench_price_range_targeted.py  bench_printing_planes.py  bench_printing_range.py  bench_produces_planes.py  bench_random.py  bench_range_bits.py  bench_rarity_planes.py  bench_tag_postings_compose.py  bench_text_memo.py  bench_verify_order.py  build_guard_corpus.py  build_placeholder_codebook.py  build_placeholder_templates.py  build_wild_corpus.py  compare_minification.py  copy_images_to_s3.py  gen_postgres_conf.py  generate_card_html_fixture.py  generate_flavor_fingerprint.py  placeholder_assignment.py  placeholder_centroids_v1.json  (+3 more)
shared_cache/: Cargo.toml  README.md  benchmark.py  demo.py  pyproject.toml  sketch.py
(+425 files in other folders)
