[package]
name = "card_engine"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "card_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module"] }
regex = "1"
serde_json = "1"
rkyv = "0.8"
memmap2 = "0.9"
libc = "0.2"
