[package]
name = "card_engine"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "card_engine"
crate-type = ["cdylib"]

[features]
# Counting global allocator + reload memory breakdown, exposed via QueryEngine.mem_stats().
# Measurement-only; never enable for production builds.
alloc-counter = []

[dependencies]
# extension-module is enabled by maturin (see pyproject.toml [tool.maturin]) so that
# plain `cargo test` can still link against libpython for Rust unit tests.
pyo3 = { version = "0.29.0" }
regex = "1"
serde_json = "1"
rkyv = "0.8"
memmap2 = "0.9"
libc = "0.2"
